--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Fantasy‘s Blog
+title: Fantasy's Blog
 SEOTitle: 李博 博客 | Fantasy's Blog
 header-img: img/home-bg.jpg
 email: luckybyte@163.com
@@ -26,7 +26,7 @@ twitter_username:   luckybyte
 # from 2016, 'pygments' is unsupported on GitHub Pages. Use 'rouge' for highlighting instead.
 highlighter: rouge
 permalink: pretty
-paginate: 10
+paginate: 6
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md","README.zh.md"]
 anchorjs: true                          # if you want to customize anchor. check out line:181 of `post.html`
 # If you have timezone issue (e.g. #68) in China, uncomment to use this:
